--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Name: John Doe</p>
             <p>Address: 123 Main St, Anytown, USA</p>
             <p>Phone: 555-555-5555</p>
-            <p>Email: <a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
+            <p>Email: <a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
         </section>
         <section class="order-summary">
             <h2>Order Summary</h2>
